# cookiecutter-pypackage-minimal

./: README.md  cookiecutter.json
hooks/: post_gen_project.sh
{{cookiecutter.package_name}}/: .gitignore  .pre-commit-config.yaml  Makefile  README.rst  pyproject.toml  pytype.cfg  setup.cfg
{{cookiecutter.package_name}}/docs/: conf.py  index.rst
{{cookiecutter.package_name}}/tests/: test_sample.py
{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/: __init__.py
