[tool.poetry]
name = "{{ cookiecutter.package_name }}"
version = "{{ cookiecutter.package_version }}"
description = "{{ cookiecutter.package_description }}"
license = "MIT"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
readme = "README.rst"
homepage = "{{ cookiecutter.package_url }}"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.4"
pytest-cov = "^2.8"
black = ">=19.10b0"
pre-commit = "^2.2"
sphinx = "^2.4"
sphinx-autodoc-typehints = "^1.10"
reorder-python-imports = "^2.2"
flake8 = "^3.7"
flake8-pytest-style = "^1.0.0"
pandas-vet = "^0.2.2"
flake8-bandit = "^2.1.2"
flake8-docstrings = "^1.5.0"
flake8-annotations-complexity = "^0.0.4"
flake8-cognitive-complexity = "^0.0.2"
flake8-comprehensions = "^3.2.2"

[tool.black]
line-length = 100
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | _build
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
