[tool.poetry]
name = "{{ cookiecutter.package_name }}"
version = "{{ cookiecutter.package_version }}"
description = "{{ cookiecutter.package_description }}"
license = "MIT"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
readme = "README.rst"
homepage = "{{ cookiecutter.package_url }}"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
]

[tool.poetry.dependencies]
python = "^3.8,<3.10"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
pytest-cov = "^2.11.1"
black = "^21.4b2"
pre-commit = "^2.12.1"
Sphinx = "^3.5.4"
sphinx-autodoc-typehints = "^1.12.0"
reorder-python-imports = "^2.5.0"
flake8 = "^3.9.1"
flake8-pytest-style = "^1.4.1"
pandas-vet = "^0.2.2"
flake8-bandit = "^2.1.2"
flake8-docstrings = "^1.6.0"
flake8-annotations-complexity = "^0.0.6"
flake8-cognitive-complexity = "^0.1.0"
flake8-comprehensions = "^3.4.0"
pyupgrade = "^2.13.0"
mypy = "^0.812"
pytype = "^2021.4.26"

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | _build
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
